# ApplePy

./: .gitignore  404.html  Package.resolved  Package.swift  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
Docs/: BuildingAndPackaging.md  GettingStarted.md  comparison.md  getting-started.md  index.md  quickstart.md
Docs/assets/: extra.css
Docs/examples/: index.md  pycoreml.md  pynatural.md  swiftkeychain.md
Docs/guide/: building.md  macros.md  memory-management.md  type-conversion.md
Examples/Counter/: build.sh  counter.swift  test_counter.py
Examples/HelloWorld/: build.sh  hello.swift  test_hello.py
Plugins/ApplePyBuild/: ApplePyBuildPlugin.swift
Plugins/ApplePyBundle/: ApplePyBundlePlugin.swift
Plugins/ApplyPyBuild/: ApplyPyBuildPlugin.swift
Plugins/ApplyPyBundle/: ApplyPyBundlePlugin.swift
Sources/ApplePy/: ApplePy.swift  AsyncBridge.swift  BufferBridge.swift  ErrorBridge.swift  MemoryBridge.swift  SubclassingNotes.swift  Version.swift
Sources/ApplePyClient/: Macros.swift
Sources/ApplePyFFI/: module.modulemap
Sources/ApplePyMacroCore/: PyClassMacro.swift  PyEnumMacro.swift  PyFunctionMacro.swift  PyModuleMacro.swift
Sources/ApplePyMacros/: ApplePyMacros.swift  (+8 more)
Tools/: applepy-pack.py  applepy-stubs.py
Tools/applepy-cli/: README.md  applepy_cli.py  pyproject.toml
Tools/applepy-cli/applepy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
comparison/: index.html
examples/: index.html
getting-started/: index.html
quickstart/: index.html
search/: search_index.json
(+33 files in other folders)
